[workspace]
members = [
  "nasadem",
  "demmit",
  "terrain",
]
resolver = "2"

[workspace.dependencies]
anyhow            = "1"
approx            = "0.5.1"
camino            = "1"
clap              = { version = "4.4.2", features = ["derive"] }
criterion         = { version = "0.5", features = ["html_reports"] }
dashmap           = "5.5.3"
geo               = "0.26.0"
image             = "0"
itertools         = "0.14"
log               = "0.4.20"
memmap2           = "0.7.1"
num-traits        = "0.2"
thiserror         = "1.0.48"
tikv-jemallocator = "0.5"

# We want meaninful stack traces when profiling/debugging
# benches/tests.
[profile.release]
debug = true
