[package]
categories  = ["science::geo"]
description = "NASADEM SRTM elevation tile loading and lookup."
edition     = "2021"
homepage    = "https://github.com/jaykickliter/terrain"
keywords    = ["gis", "geo", "geography", "geospatial"]
license     = "MIT OR Apache-2.0"
name        = "nasadem"
readme      = "README.md"
repository  = "https://github.com/jaykickliter/terrain"
version     = "0.0.1"

[features]
default = []
image = ["dep:image", "num-traits"]

[dependencies]
geo        = { workspace = true }
image      = { workspace = true, optional = true }
memmap2    = { workspace = true }
num-traits = { workspace = true, optional = true }

[dev-dependencies]
approx    = { workspace = true }
criterion = { workspace = true }
itertools = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
